kubernetes/apps/actual/app/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual
  namespace: actual
  labels:
    app.kubernetes.io/name: actual
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: actual
  template:
    metadata:
      name: actual
      labels:
        app.kubernetes.io/name: actual
    spec:
      containers:
        - name: actual
          image: ghcr.io/actualbudget/actual:25.6.0
          imagePullPolicy: Always
          volumeMounts:
            - name: actual-data
              mountPath: /data
          resources:
            requests:
              cpu: 26m
              memory: 170Mi
            limits:
              memory: 170Mi
      volumes:
        - name: actual-data
          persistentVolumeClaim:
            claimName: actual-data
